tests/v0-fail/optional.out
Running <root>/optional.cli ...

printf "hello\n"
---
hello
---
ERROR: "hello" at line <root>/optional.cli:7 does not match output
[XX] missed sequence { ... }
  [OK] matched optional { ... }
    [OK] matched "hello"
  [XX] missed "hello" != <eof>

❌ FAIL

<root>/optional.cli FAILED
Error: "hello" at line <root>/optional.cli:7 does not match output

